# Visual-Volatility-Intelligence-Market-Regime-Forecasting-from-3D-Surface-Analysis

./: .gitignore  CHECKLIST.md  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  pyproject.toml
artifacts/: metrics.json  predictions.csv
artifacts/models/: cnn.pt
data/: processed_fast.csv
frontend/: index.html  package.json
frontend/src/: App.jsx  api.js  styles.css
notebooks/: vvi_demo.ipynb
scripts/: run_api.py  run_pipeline.py
vvi/: config.py  pipeline.py
vvi/api/: main.py
vvi/backtest/: engine.py
vvi/data/: __init__.py  provider.py
vvi/iv/: __init__.py  black_scholes.py
vvi/models/: __init__.py  baselines.py  cnn.py  dataset.py  train.py
vvi/signals/: __init__.py  generator.py
vvi/surfaces/: __init__.py  builder.py  renderer.py
